--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "Backend for CryptoChat",
   "dependencies": {
-    "socket.io": "^2.0.4"
+    "express": "^4.16.3",
+    "socket.io": "^2.0.4",
+    "sqlite3": "^4.0.0"
   }
 }
