--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for CryptoChat",
   "dependencies": {
     "express": "^4.16.3",
+    "node-rsa": "^0.4.2",
     "socket.io": "^2.0.4",
     "sqlite3": "^4.0.0"
   }
