--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "description": "Backend for CryptoChat",
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "node-rsa": "^0.4.2",
     "socket.io": "^2.0.4",
