--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.16.3",
     "node-rsa": "^0.4.2",
     "socket.io": "^2.0.4",
+    "sqlite": "^2.9.1",
     "sqlite3": "^4.0.0"
   }
 }
