--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "html-entities": "^1.2.1",
     "node-rsa": "^0.4.2",
     "socket.io": "^2.0.4",
     "sqlite": "^2.9.1",
